--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-svg": "^15.10.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-ui-lib": "^7.34.5",
+    "react-native-video": "^6.8.2",
     "reactotron-react-native": "^5.1.10",
     "twrnc": "^4.6.0"
   },
