--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/drawer": "^7.0.19",
