--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
+    "papaparse": "^5.4.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-date-picker": "^5.0.8",
+    "react-native-document-picker": "^9.3.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.2",
     "react-native-reanimated": "^3.16.3",
@@ -31,7 +37,8 @@
     "react-native-ui-lib": "^7.34.5",
     "react-native-video": "^6.8.2",
     "reactotron-react-native": "^5.1.10",
-    "twrnc": "^4.6.0"
+    "twrnc": "^4.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,6 +48,8 @@
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
+    "@types/json2csv": "^5.0.7",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
