added on configration on firebase

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,7 +16,9 @@ end
 
 target 'night_club' do
   config = use_native_modules!
-
+  # right after `use_frameworks! :linkage => :static`
+$RNFirebaseAsStaticFramework = true
+  use_frameworks! :linkage => :static
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
