--- a/ios/night_club/Info.plist
+++ b/ios/night_club/Info.plist
@@ -1,84 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>night_club</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<false/>
-		<key>NSAllowsLocalNetworking</key>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<true/>
+
+		<key>CFBundleDevelopmentRegion</key>
+		<string>en</string>
+		<key>CFBundleDisplayName</key>
+		<string>night_club</string>
+		<key>CFBundleExecutable</key>
+		<string>$(EXECUTABLE_NAME)</string>
+		<key>CFBundleIdentifier</key>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+		<key>CFBundleInfoDictionaryVersion</key>
+		<string>6.0</string>
+		<key>CFBundleName</key>
+		<string>$(PRODUCT_NAME)</string>
+		<key>CFBundlePackageType</key>
+		<string>APPL</string>
+		<key>CFBundleShortVersionString</key>
+		<string>$(MARKETING_VERSION)</string>
+		<key>CFBundleSignature</key>
+		<string>????</string>
+		<key>CFBundleVersion</key>
+		<string>$(CURRENT_PROJECT_VERSION)</string>
+		<key>LSRequiresIPhoneOS</key>
+		<true/>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<false/>
+			<key>NSAllowsLocalNetworking</key>
+			<true/>
+		</dict>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string></string>
+		<key>UILaunchStoryboardName</key>
+		<string>LaunchScreen</string>
+		<key>UIRequiredDeviceCapabilities</key>
+		<array>
+			<string>arm64</string>
+		</array>
+		<key>UISupportedInterfaceOrientations</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<true/>
+		<key>UIAppFonts</key>
+		<array>
+			<string>Roboto-Black.ttf</string>
+			<string>Roboto-BlackItalic.ttf</string>
+			<string>Roboto-Bold.ttf</string>
+			<string>Roboto-BoldItalic.ttf</string>
+			<string>Roboto-Italic.ttf</string>
+			<string>Roboto-Light.ttf</string>
+			<string>Roboto-LightItalic.ttf</string>
+			<string>Roboto-Medium.ttf</string>
+			<string>Roboto-MediumItalic.ttf</string>
+			<string>Roboto-Regular.ttf</string>
+			<string>Roboto-Thin.ttf</string>
+			<string>Roboto-ThinItalic.ttf</string>
+			<string>PoppinsBlack.ttf</string>
+			<string>PoppinsBlackItalic.ttf</string>
+			<string>PoppinsBold.ttf</string>
+			<string>PoppinsBoldItalic.ttf</string>
+			<string>PoppinsExtraBold.ttf</string>
+			<string>PoppinsExtraBoldItalic.ttf</string>
+			<string>PoppinsExtraLight.ttf</string>
+			<string>PoppinsExtraLightItalic.ttf</string>
+			<string>PoppinsItalic.ttf</string>
+			<string>PoppinsLight.ttf</string>
+			<string>PoppinsLightItalic.ttf</string>
+			<string>PoppinsMedium.ttf</string>
+			<string>PoppinsMediumItalic.ttf</string>
+			<string>PoppinsRegular.ttf</string>
+			<string>PoppinsSemiBold.ttf</string>
+			<string>PoppinsSemiBoldItalic.ttf</string>
+			<string>PoppinsThin.ttf</string>
+			<string>PoppinsThinItalic.ttf</string>
+		</array>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>arm64</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Roboto-Black.ttf</string>
-		<string>Roboto-BlackItalic.ttf</string>
-		<string>Roboto-Bold.ttf</string>
-		<string>Roboto-BoldItalic.ttf</string>
-		<string>Roboto-Italic.ttf</string>
-		<string>Roboto-Light.ttf</string>
-		<string>Roboto-LightItalic.ttf</string>
-		<string>Roboto-Medium.ttf</string>
-		<string>Roboto-MediumItalic.ttf</string>
-		<string>Roboto-Regular.ttf</string>
-		<string>Roboto-Thin.ttf</string>
-		<string>Roboto-ThinItalic.ttf</string>
-		<string>PoppinsBlack.ttf</string>
-		<string>PoppinsBlackItalic.ttf</string>
-		<string>PoppinsBold.ttf</string>
-		<string>PoppinsBoldItalic.ttf</string>
-		<string>PoppinsExtraBold.ttf</string>
-		<string>PoppinsExtraBoldItalic.ttf</string>
-		<string>PoppinsExtraLight.ttf</string>
-		<string>PoppinsExtraLightItalic.ttf</string>
-		<string>PoppinsItalic.ttf</string>
-		<string>PoppinsLight.ttf</string>
-		<string>PoppinsLightItalic.ttf</string>
-		<string>PoppinsMedium.ttf</string>
-		<string>PoppinsMediumItalic.ttf</string>
-		<string>PoppinsRegular.ttf</string>
-		<string>PoppinsSemiBold.ttf</string>
-		<string>PoppinsSemiBoldItalic.ttf</string>
-		<string>PoppinsThin.ttf</string>
-		<string>PoppinsThinItalic.ttf</string>
-	</array>
-</dict>
 </plist>
