--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
     "@react-native-firebase/firestore": "^21.6.1",
+    "@react-native-firebase/storage": "^21.6.1",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/drawer": "^7.0.19",
