--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "papaparse": "^5.4.1",
