--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "papaparse": "^5.4.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-create-thumbnail": "^2.0.1",
     "react-native-date-picker": "^5.0.8",
     "react-native-document-picker": "^9.3.1",
     "react-native-fast-image": "^8.6.3",
