--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.2",
+    "react-native-mmkv-storage": "^0.11.2",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
