--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,8 +12,12 @@
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="https" android:host="pushnotifiation-d1bcb.web.app" />
-        <data android:scheme="http" android:host="pushnotifiation-d1bcb.web.app" />
+        <!-- For VerifySuccess -->
+        <data android:scheme="https" android:host="pushnotifiation-d1bcb.web.app" android:pathPrefix="/email-verified" />
+        <data android:scheme="http" android:host="pushnotifiation-d1bcb.web.app" android:pathPrefix="/email-verified" />
+        <!-- For LoadingSplash -->
+        <data android:scheme="https" android:host="pushnotifiation-d1bcb.web.app" android:pathPrefix="/login" />
+        <data android:scheme="http" android:host="pushnotifiation-d1bcb.web.app" android:pathPrefix="/login" />
       </intent-filter>
       <!-- Main launcher activity -->
       <intent-filter>
