--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emailjs/react-native": "^4.2.2",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -22,7 +23,6 @@
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
-    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "papaparse": "^5.4.1",
@@ -37,6 +37,7 @@
     "react-native-image-picker": "^7.2.2",
     "react-native-mmkv-storage": "^0.11.2",
     "react-native-reanimated": "^3.16.3",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
