--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
   <application 
   android:name=".MainApplication" 
   android:label="@string/app_name" 
-  android:icon="@mipmap/ic_launcher_monochrome"
+  android:icon="@mipmap/ic_launcher"
    android:roundIcon="@mipmap/ic_launcher"
     android:allowBackup="false" 
     android:theme="@style/AppTheme"
