--- a/ios/night_club/Info.plist
+++ b/ios/night_club/Info.plist
@@ -8,7 +8,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>en</string>
 		<key>CFBundleDisplayName</key>
-		<string>night_club</string>
+		<string>nite</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
