--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,40 +1,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.nite">
 
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <application
+        android:name=".MainApplication"
+        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher"
+        android:allowBackup="false"
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true"
+        android:usesCleartextTraffic="true">
+        
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true">
+            
+            <!-- Deep Link Intent Filter -->
+        <intent-filter android:autoVerify="true">
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data android:scheme="https" android:host="nightclubapp.web.app" />
+</intent-filter>
 
 
-  <application 
-  android:name=".MainApplication" 
-  android:label="@string/app_name" 
-  android:icon="@mipmap/ic_launcher"
-   android:roundIcon="@mipmap/ic_launcher"
-    android:allowBackup="false" 
-    android:theme="@style/AppTheme"
-     android:supportsRtl="true"
-      android:usesCleartextTraffic="true">
-    <activity android:name=".MainActivity"
-     android:label="@string/app_name"
-      android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode" android:launchMode="singleTask" 
-      android:windowSoftInputMode="adjustResize"
-       android:exported="true">
-      <!-- this is the deep link  -->
-      <intent-filter android:autoVerify="true">
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-        <!-- For VerifySuccess -->
-        <data android:scheme="https" android:host="nightclubapp.web.app" android:pathPrefix="/email-verified" />
-        <!-- For LoadingSplash -->
-        <data android:scheme="https" android:host="nightclubapp.web.app" android:pathPrefix="/login" />
-  
-      </intent-filter>
-      <!-- Main launcher activity -->
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
+            <!-- Main Launcher Intent Filter -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
