--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.2",
     "react-native-mmkv-storage": "^0.11.2",
+    "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "^3.16.3",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.0.0",
