--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.2",
+    "react-native-manage-external-storage": "^0.1.8",
     "react-native-mmkv-storage": "^0.11.2",
     "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "^3.16.3",
